chore: switch testing to vitest, remove mocha, ts-mocha and chai

--- a/packages/extension/configs/tsconfig.rollup.json
+++ b/packages/extension/configs/tsconfig.rollup.json
@@ -11,7 +11,7 @@
     "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true,
     "sourceMap": true,
-    "types": ["mocha", "chrome"],
+    "types": ["chrome"],
     "paths": {
       "@/*": ["../src/*"],
       "@action/*": ["../src/ui/action/*"]
