--- a/packages/keyring/tsconfig.json
+++ b/packages/keyring/tsconfig.json
@@ -11,6 +11,7 @@
     "outDir": "dist",
     "resolveJsonModule": true,
     "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
     "declaration": true
   },
   "include": ["src/**/*.ts", "tests/**/*.ts"],
