--- a/packages/extension-bridge/package.json
+++ b/packages/extension-bridge/package.json
@@ -2,6 +2,7 @@
   "name": "@enkryptcom/extension-bridge",
   "version": "0.0.2",
   "description": "Messaging in Web Extensions made easy. Out of the box.",
+  "type": "module",
   "keywords": [
     "chrome",
     "extension",
@@ -39,8 +40,6 @@
     "webextension-polyfill": "^0.12.0"
   },
   "devDependencies": {
-    "@types/chai": "^5.0.0",
-    "@types/mocha": "^10.0.9",
     "@types/node": "^22.7.8",
     "@types/webextension-polyfill": "^0.12.1",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
