--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -17,7 +17,7 @@
     "build:firefox": "yarn prebuild && cross-env BROWSER='firefox' MINIFY='true' vite build && node configs/get-system-info.js",
     "build:opera": "yarn prebuild && cross-env BROWSER='opera' MINIFY='true' vite build",
     "kadena:prebuild": "pactjs contract-generate --contract=coin --api https://api.chainweb.com/chainweb/0.0/mainnet01/chain/1/pact",
-    "test": "ts-mocha --require ./configs/testNullCompiler.cjs --paths -p configs/tsconfig.test.json ./**/*.mocha.ts",
+    "test": "vitest run -c ./configs/vitest.config.mts",
     "watch": "yarn dev",
     "watch:chrome": "yarn dev",
     "watch:firefox": "yarn prebuild && cross-env BROWSER='firefox' vite"
@@ -61,7 +61,6 @@
     "bip39": "^3.1.0",
     "bitcoinjs-lib": "^6.1.6",
     "bs58": "^6.0.0",
-    "chai": "^4.5.0",
     "concurrently": "^9.0.1",
     "echarts": "^5.5.1",
     "ethereum-cryptography": "^2.2.1",
@@ -78,6 +77,7 @@
     "switch-ts": "^1.1.1",
     "url-parse": "^1.5.10",
     "uuid": "^10.0.0",
+    "vitest": "^2.1.3",
     "vue": "^3.5.12",
     "vue-echarts": "7.0.3",
     "vue-router": "^4.4.5",
@@ -106,7 +106,6 @@
     "@types/jest": "^29.5.13",
     "@types/less": "^3.0.6",
     "@types/lodash": "^4.17.12",
-    "@types/mocha": "^10.0.9",
     "@types/node": "^22.7.8",
     "@types/url-parse": "^1.4.11",
     "@types/utf-8-validate": "^5.0.2",
@@ -122,9 +121,9 @@
     "eslint": "^9.13.0",
     "eslint-plugin-vue": "^9.29.1",
     "fs-extra": "^11.2.0",
+    "jsdom": "^25.0.1",
     "less": "^4.2.0",
     "less-loader": "^12.2.0",
-    "mocha": "^10.7.3",
     "npm-run-all2": "^6.2.6",
     "prettier": "^3.3.3",
     "rimraf": "^6.0.1",
@@ -132,11 +131,11 @@
     "rollup-plugin-uglify": "^6.0.4",
     "semver": "^7.6.3",
     "systeminformation": "^5.23.5",
-    "ts-mocha": "^10.0.0",
     "typescript": "~5.6.3",
     "url": "^0.11.4",
     "vite": "^5.4.9",
     "vite-plugin-node-polyfills": "0.17.0",
+    "vite-tsconfig-paths": "^5.0.1",
     "vue-tsc": "^2.1.6",
     "webextension-polyfill": "^0.12.0"
   },
