--- a/packages/hw-wallets/package.json
+++ b/packages/hw-wallets/package.json
@@ -2,6 +2,7 @@
   "name": "@enkryptcom/hw-wallets",
   "version": "0.0.3",
   "description": "Hardware wallet manager for enkrypt",
+  "type": "module",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
@@ -11,27 +12,22 @@
   "scripts": {
     "build": "tsup src/index.ts --format esm,cjs --dts --clean",
     "lint": "prettier --write .",
-    "test": "ts-mocha -p tsconfig.json tests/**/*.test.ts"
+    "test": "vitest run"
   },
   "engines": {
     "node": ">=14.15.0"
   },
   "devDependencies": {
-    "@types/chai": "^5.0.0",
-    "@types/mocha": "^10.0.9",
     "@types/node": "^22.7.8",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
-    "chai": "^4.5.0",
     "eslint": "^8.57.1",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.10.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-module-resolver": "^1.5.0",
-    "mocha": "^10.7.3",
     "prettier": "^2.8.8",
-    "ts-mocha": "^10.0.0",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "tsup": "^8.3.0",
@@ -66,6 +62,7 @@
     "bs58": "^6.0.0",
     "hdkey": "^2.1.0",
     "ledger-bitcoin": "^0.2.3",
+    "vitest": "^2.1.3",
     "webextension-polyfill": "^0.12.0"
   }
 }
