--- a/packages/keyring/package.json
+++ b/packages/keyring/package.json
@@ -2,6 +2,7 @@
   "name": "@enkryptcom/keyring",
   "version": "0.0.4",
   "description": "Key management for enkrypt extension",
+  "type": "module",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
@@ -11,7 +12,7 @@
   "scripts": {
     "build": "tsup src/index.ts --format esm,cjs --dts --clean",
     "lint": "prettier --write .",
-    "test": "ts-mocha -p tsconfig.json tests/**/*.test.ts --exit"
+    "test": "vitest run"
   },
   "engines": {
     "node": ">=14.15.0"
@@ -26,24 +27,20 @@
     "@enkryptcom/utils": "workspace:^",
     "@polkadot/util": "^13.2.1",
     "assert": "^2.1.0",
-    "bip39": "^3.1.0"
+    "bip39": "^3.1.0",
+    "vitest": "^2.1.3"
   },
   "devDependencies": {
-    "@types/chai": "^5.0.0",
-    "@types/mocha": "^10.0.9",
     "@types/node": "^22.7.8",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
-    "chai": "^4.5.0",
     "eslint": "^8.57.1",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.10.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-module-resolver": "^1.5.0",
-    "mocha": "^10.7.3",
     "prettier": "^2.8.8",
-    "ts-mocha": "^10.0.0",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "tsup": "^8.3.0",
