--- a/packages/signers/bitcoin/package.json
+++ b/packages/signers/bitcoin/package.json
@@ -2,6 +2,7 @@
   "name": "@enkryptcom/signer-bitcoin",
   "version": "0.0.2",
   "description": "Bitcoin blockchain signer",
+  "type": "module",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
@@ -11,7 +12,7 @@
   "scripts": {
     "build": "tsup src/index.ts --format esm,cjs --dts --clean",
     "lint": "prettier --write .",
-    "test": "ts-mocha -p tsconfig.json tests/**/*.test.ts"
+    "test": "vitest run"
   },
   "engines": {
     "node": ">=14.15.0"
@@ -20,16 +21,14 @@
     "@enkryptcom/utils": "workspace:^",
     "@noble/secp256k1": "1.7.1",
     "bip39": "^3.1.0",
-    "chai": "^4.5.0",
     "hdkey": "^2.1.0",
     "tweetnacl": "^1.0.3",
-    "tweetnacl-util": "^0.15.1"
+    "tweetnacl-util": "^0.15.1",
+    "vitest": "^2.1.3"
   },
   "devDependencies": {
     "@enkryptcom/types": "workspace:^",
-    "@types/chai": "^5.0.0",
     "@types/hdkey": "^2.1.0",
-    "@types/mocha": "^10.0.9",
     "@types/node": "^22.7.8",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
@@ -39,9 +38,7 @@
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-module-resolver": "^1.5.0",
-    "mocha": "^10.7.3",
     "prettier": "^2.8.8",
-    "ts-mocha": "^9.0.2",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "tsup": "^8.3.0",
