--- a/packages/signers/polkadot/package.json
+++ b/packages/signers/polkadot/package.json
@@ -2,6 +2,7 @@
   "name": "@enkryptcom/signer-polkadot",
   "version": "0.0.2",
   "description": "Polkadot blockchain signers",
+  "type": "module",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
@@ -11,7 +12,7 @@
   "scripts": {
     "build": "tsup src/index.ts --format esm,cjs --dts --clean",
     "lint": "prettier --write .",
-    "test": "ts-mocha -p tsconfig.json tests/**/*.test.ts"
+    "test": "vitest run"
   },
   "engines": {
     "node": ">=14.15.0"
@@ -23,12 +24,10 @@
     "@polkadot/util-crypto": "^13.2.1",
     "@polkadot/wasm-crypto": "^7.4.1",
     "assert": "^2.1.0",
-    "chai": "^4.5.0"
+    "vitest": "^2.1.3"
   },
   "devDependencies": {
     "@enkryptcom/types": "workspace:^",
-    "@types/chai": "^5.0.0",
-    "@types/mocha": "^10.0.9",
     "@types/node": "^22.7.8",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
@@ -38,9 +37,7 @@
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-module-resolver": "^1.5.0",
-    "mocha": "^10.7.3",
     "prettier": "^2.8.8",
-    "ts-mocha": "^10.0.0",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "tsup": "^8.3.0",
