--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -2,6 +2,7 @@
   "name": "@enkryptcom/utils",
   "version": "0.0.5",
   "description": "utility functions for enkrypt extension",
+  "type": "module",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
@@ -11,7 +12,7 @@
   "scripts": {
     "build": "tsup src/index.ts --format esm,cjs --dts --clean",
     "lint": "prettier --write .",
-    "test": "ts-mocha -p tsconfig.json tests/**/*.test.ts"
+    "test": "vitest run"
   },
   "engines": {
     "node": ">=14.15.0"
@@ -21,13 +22,11 @@
     "@ethereumjs/util": "^9.1.0",
     "@polkadot/util-crypto": "^13.2.1",
     "bip39": "^3.1.0",
-    "chai": "^4.5.0",
     "ethereum-cryptography": "^2.2.1",
+    "vitest": "^2.1.3",
     "web3-utils": "^1.10.4"
   },
   "devDependencies": {
-    "@types/chai": "^5.0.0",
-    "@types/mocha": "^10.0.9",
     "@types/node": "^22.7.8",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
@@ -37,9 +36,7 @@
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-module-resolver": "^1.5.0",
-    "mocha": "^10.7.3",
     "prettier": "^2.8.8",
-    "ts-mocha": "^10.0.0",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "tsup": "^8.3.0",
