fix: build, tests, chore: lint

--- a/packages/extension-bridge/package.json
+++ b/packages/extension-bridge/package.json
@@ -22,8 +22,8 @@
     "url": "git+https://github.com/enkryptcom/enKrypt/tree/main/packages/extension-bridge"
   },
   "author": "Neek Sandhu <neek.sandhu@outlook.com>",
-  "main": "dist/index.js",
-  "module": "dist/index.mjs",
+  "main": "dist/index.cjs",
+  "module": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsup src/index.ts src/window/index.ts src/types.ts --clean --format esm,cjs --dts",
