--- a/packages/signers/ethereum/package.json
+++ b/packages/signers/ethereum/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.6",
   "description": "Ethereum blockchain signer",
   "type": "module",
-  "main": "dist/index.js",
-  "module": "dist/index.mjs",
+  "main": "dist/index.cjs",
+  "module": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
     "dist"
