--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -3,9 +3,13 @@
   "version": "0.0.5",
   "description": "typescript types for enkrypt packages",
   "type": "module",
-  "main": "dist/index.cjs",
-  "module": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "src/index.ts",
+  "module": "src/index.ts",
+  "publishConfig": {
+    "main": "dist/index.cjs",
+    "module": "dist/index.js",
+    "types": "dist/index.d.ts"
+  },
   "files": [
     "dist"
   ],
