--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -131,6 +131,7 @@
     "rollup-plugin-uglify": "^6.0.4",
     "semver": "^7.6.3",
     "systeminformation": "^5.23.5",
+    "tsup": "^8.3.5",
     "typescript": "~5.6.3",
     "url": "^0.11.4",
     "vite": "^5.4.9",
