devop: upgrade to yarn 4

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "enkrypt",
-  "packageManager": "yarn@3.8.1",
+  "packageManager": "yarn@4.5.1",
   "version": "0.0.3",
   "private": true,
   "workspaces": [
@@ -17,15 +17,15 @@
     "packages/name-resolution"
   ],
   "scripts": {
-    "test": "yarn workspaces foreach -v run test",
-    "lint": "yarn workspaces foreach run lint",
+    "test": "yarn workspaces foreach --worktree -v run test",
+    "lint": "yarn workspaces foreach --worktree run lint",
     "build:all": "ultra -r build",
     "watch": "concurrently 'npm:watch-*'",
     "watch-extension": "cd packages/extension && yarn watch",
     "watch-ts": "nodemon --exec 'yarn run build:all && node scripts/compile-done.js'",
     "upgrade": "yarn upgrade-interactive",
-    "version:bump:patch": "yarn workspaces foreach -pv --exclude @enkryptcom/extension exec 'yarn version --immediate patch'",
-    "publish": "yarn workspaces foreach -pv --exclude @enkryptcom/extension exec 'yarn npm publish --access public --otp 312003'",
+    "version:bump:patch": "yarn workspaces foreach --worktree -pv --exclude @enkryptcom/extension exec 'yarn version --immediate patch'",
+    "publish": "yarn workspaces foreach --worktree -pv --exclude @enkryptcom/extension exec 'yarn npm publish --access public --otp 312003'",
     "version:apply": "yarn version apply --all",
     "prepare": "husky"
   },
@@ -41,8 +41,6 @@
   },
   "resolutions": {
     "@ledgerhq/compressjs": "https://registry.yarnpkg.com/@favware/skip-dependency/-/skip-dependency-1.2.1.tgz",
-    "@noble/hashes": "^1.4.0",
-    "fork-ts-checker-webpack-plugin": "^6.5.3",
     "@amplitude/plugin-autocapture-browser@^1.0.2": "patch:@amplitude/plugin-autocapture-browser@npm%3A1.0.3#./.yarn/patches/@amplitude-plugin-autocapture-browser-npm-1.0.3-edb25bef55.patch"
   }
 }
