--- a/package.json
+++ b/package.json
@@ -3,19 +3,21 @@
   "packageManager": "yarn@4.5.1",
   "version": "0.0.3",
   "private": true,
-  "workspaces": [
-    "packages/signers/*",
-    "packages/types",
-    "packages/utils",
-    "packages/keyring",
-    "packages/extension-bridge",
-    "packages/extension",
-    "packages/storage",
-    "packages/request",
-    "packages/hw-wallets",
-    "packages/swap",
-    "packages/name-resolution"
-  ],
+  "workspaces": {
+    "packages": [
+      "packages/signers/*",
+      "packages/types",
+      "packages/utils",
+      "packages/keyring",
+      "packages/extension-bridge",
+      "packages/extension",
+      "packages/storage",
+      "packages/request",
+      "packages/hw-wallets",
+      "packages/swap",
+      "packages/name-resolution"
+    ]
+  },
   "scripts": {
     "test": "yarn workspaces foreach --worktree -v run test",
     "lint": "yarn workspaces foreach --worktree run lint",
@@ -40,7 +42,10 @@
     "ultra-runner": "^3.10.5"
   },
   "resolutions": {
+    "@zondax/ledger-cosmos-js/vue": "^3.5.12",
     "@ledgerhq/compressjs": "https://registry.yarnpkg.com/@favware/skip-dependency/-/skip-dependency-1.2.1.tgz",
+    "@ledgerhq/speculos-transport": "https://registry.yarnpkg.com/@favware/skip-dependency/-/skip-dependency-1.2.1.tgz",
+    "@ledgerhq/ledger-key-ring-protocol": "https://registry.yarnpkg.com/@favware/skip-dependency/-/skip-dependency-1.2.1.tgz",
     "@amplitude/plugin-autocapture-browser@^1.0.2": "patch:@amplitude/plugin-autocapture-browser@npm%3A1.0.3#./.yarn/patches/@amplitude-plugin-autocapture-browser-npm-1.0.3-edb25bef55.patch"
   }
 }
