--- a/packages/extension-bridge/package.json
+++ b/packages/extension-bridge/package.json
@@ -44,23 +44,23 @@
     "webextension-polyfill": "^0.12.0"
   },
   "devDependencies": {
-    "@types/node": "^22.7.8",
+    "@types/node": "^22.9.0",
     "@types/webextension-polyfill": "^0.12.1",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
-    "bumpp": "^9.7.1",
-    "eslint": "^8.57.1",
+    "bumpp": "^9.8.1",
+    "eslint": "^9.14.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-prettier": "^8.10.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-module-resolver": "^1.5.0",
-    "prettier": "^2.8.8",
+    "prettier": "^3.3.3",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "tsup": "^8.3.0",
+    "tsup": "^8.3.5",
     "type-fest": "^4.26.1",
-    "typescript": "^4.9.5",
-    "typescript-eslint": "0.0.1-alpha.0"
+    "typescript": "^5.6.3",
+    "typescript-eslint": "8.14.0"
   }
 }
