--- a/packages/signers/ethereum/package.json
+++ b/packages/signers/ethereum/package.json
@@ -28,26 +28,26 @@
     "hdkey": "^2.1.0",
     "tweetnacl": "^1.0.3",
     "tweetnacl-util": "^0.15.1",
-    "vitest": "^2.1.3"
+    "vitest": "^2.1.4"
   },
   "devDependencies": {
     "@enkryptcom/types": "workspace:^",
     "@types/hdkey": "^2.1.0",
-    "@types/node": "^22.7.8",
+    "@types/node": "^22.9.0",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
-    "eslint": "^8.57.1",
+    "eslint": "^9.14.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-prettier": "^8.10.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-module-resolver": "^1.5.0",
-    "prettier": "^2.8.8",
+    "prettier": "^3.3.3",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "tsup": "^8.3.0",
-    "typescript": "^4.9.5",
-    "typescript-eslint": "0.0.1-alpha.0"
+    "tsup": "^8.3.5",
+    "typescript": "^5.6.3",
+    "typescript-eslint": "8.14.0"
   },
   "repository": {
     "type": "git",
