--- a/packages/swap/package.json
+++ b/packages/swap/package.json
@@ -31,7 +31,7 @@
     "isomorphic-ws": "^5.0.0",
     "json-rpc-2.0": "^1.7.0",
     "lodash": "^4.17.21",
-    "rango-sdk-basic": "^0.1.57",
+    "rango-sdk-basic": "^0.1.58",
     "reconnecting-websocket": "^4.4.0",
     "uuid": "^10.0.0",
     "web3-eth": "^1.10.4",
@@ -39,22 +39,22 @@
     "ws": "^8.18.0"
   },
   "devDependencies": {
-    "@types/node": "^22.7.8",
+    "@types/node": "^22.9.0",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
-    "eslint": "^8.57.1",
+    "eslint": "^9.14.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-prettier": "^8.10.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-module-resolver": "^1.5.0",
-    "prettier": "^2.8.8",
+    "prettier": "^3.3.3",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "tsup": "^8.3.0",
-    "typescript": "^4.9.5",
-    "typescript-eslint": "0.0.1-alpha.0",
-    "vitest": "^2.1.3"
+    "tsup": "^8.3.5",
+    "typescript": "^5.6.3",
+    "typescript-eslint": "8.14.0",
+    "vitest": "^2.1.4"
   },
   "repository": {
     "type": "git",
