--- a/packages/hw-wallets/package.json
+++ b/packages/hw-wallets/package.json
@@ -36,7 +36,8 @@
     "tsconfig-paths": "^4.2.0",
     "tsup": "^8.3.5",
     "typescript": "^5.6.3",
-    "typescript-eslint": "8.14.0"
+    "typescript-eslint": "8.14.0",
+    "vitest": "^2.1.4"
   },
   "repository": {
     "type": "git",
@@ -66,7 +67,6 @@
     "bs58": "^6.0.0",
     "hdkey": "^2.1.0",
     "ledger-bitcoin": "^0.2.3",
-    "vitest": "^2.1.4",
     "webextension-polyfill": "^0.12.0"
   }
 }
