--- a/packages/keyring/package.json
+++ b/packages/keyring/package.json
@@ -31,8 +31,7 @@
     "@enkryptcom/utils": "workspace:^",
     "@polkadot/util": "^13.2.3",
     "assert": "^2.1.0",
-    "bip39": "^3.1.0",
-    "vitest": "^2.1.4"
+    "bip39": "^3.1.0"
   },
   "devDependencies": {
     "@types/node": "^22.9.0",
@@ -49,7 +48,8 @@
     "tsconfig-paths": "^4.2.0",
     "tsup": "^8.3.5",
     "typescript": "^5.6.3",
-    "typescript-eslint": "8.14.0"
+    "typescript-eslint": "8.14.0",
+    "vitest": "^2.1.4"
   },
   "repository": {
     "type": "git",
