--- a/packages/name-resolution/package.json
+++ b/packages/name-resolution/package.json
@@ -36,7 +36,8 @@
     "tsconfig-paths": "^4.2.0",
     "tsup": "^8.3.5",
     "typescript": "^5.6.3",
-    "typescript-eslint": "8.14.0"
+    "typescript-eslint": "8.14.0",
+    "vitest": "^2.1.4"
   },
   "repository": {
     "type": "git",
@@ -49,7 +50,6 @@
     "@ensdomains/address-encoder": "^1.1.2",
     "@siddomains/sidjs": "0.1.29",
     "@unstoppabledomains/resolution": "^9.3.0",
-    "ethers": "^5.7.2",
-    "vitest": "^2.1.4"
+    "ethers": "^5.7.2"
   }
 }
