--- a/packages/request/package.json
+++ b/packages/request/package.json
@@ -28,7 +28,6 @@
     "json-rpc-2.0": "^1.7.0",
     "reconnecting-websocket": "^4.4.0",
     "uuid": "^10.0.0",
-    "vitest": "^2.1.4",
     "ws": "^8.18.0"
   },
   "devDependencies": {
@@ -46,7 +45,8 @@
     "tsconfig-paths": "^4.2.0",
     "tsup": "^8.3.5",
     "typescript": "^5.6.3",
-    "typescript-eslint": "8.14.0"
+    "typescript-eslint": "8.14.0",
+    "vitest": "^2.1.4"
   },
   "repository": {
     "type": "git",
