--- a/packages/signers/polkadot/package.json
+++ b/packages/signers/polkadot/package.json
@@ -27,8 +27,7 @@
     "@polkadot/util": "^13.2.3",
     "@polkadot/util-crypto": "^13.2.3",
     "@polkadot/wasm-crypto": "^7.4.1",
-    "assert": "^2.1.0",
-    "vitest": "^2.1.4"
+    "assert": "^2.1.0"
   },
   "devDependencies": {
     "@enkryptcom/types": "workspace:^",
@@ -46,7 +45,8 @@
     "tsconfig-paths": "^4.2.0",
     "tsup": "^8.3.5",
     "typescript": "^5.6.3",
-    "typescript-eslint": "8.14.0"
+    "typescript-eslint": "8.14.0",
+    "vitest": "^2.1.4"
   },
   "repository": {
     "type": "git",
