--- a/packages/storage/package.json
+++ b/packages/storage/package.json
@@ -24,8 +24,7 @@
   "dependencies": {
     "@enkryptcom/types": "workspace:^",
     "@enkryptcom/utils": "workspace:^",
-    "localforage": "^1.10.0",
-    "vitest": "^2.1.4"
+    "localforage": "^1.10.0"
   },
   "devDependencies": {
     "@types/node": "^22.9.0",
@@ -42,7 +41,8 @@
     "tsconfig-paths": "^4.2.0",
     "tsup": "^8.3.5",
     "typescript": "^5.6.3",
-    "typescript-eslint": "8.14.0"
+    "typescript-eslint": "8.14.0",
+    "vitest": "^2.1.4"
   },
   "repository": {
     "type": "git",
