--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -27,7 +27,6 @@
     "@polkadot/util-crypto": "^13.2.3",
     "bip39": "^3.1.0",
     "ethereum-cryptography": "^2.2.1",
-    "vitest": "^2.1.4",
     "web3-utils": "^1.10.4"
   },
   "devDependencies": {
@@ -45,7 +44,8 @@
     "tsconfig-paths": "^4.2.0",
     "tsup": "^8.3.5",
     "typescript": "^5.6.3",
-    "typescript-eslint": "8.14.0"
+    "typescript-eslint": "8.14.0",
+    "vitest": "^2.1.4"
   },
   "repository": {
     "type": "git",
