--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -43,6 +43,7 @@
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "tsup": "^8.3.5",
+    "tweetnacl-util": "^0.15.1",
     "typescript": "^5.6.3",
     "typescript-eslint": "8.14.0",
     "vitest": "^2.1.4"
