--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -39,10 +39,10 @@
     "@kadena/client": "^1.16.0",
     "@kadena/pactjs-cli": "^1.16.0",
     "@ledgerhq/hw-transport-webusb": "^6.29.4",
-    "@metamask/eth-sig-util": "^7.0.3",
+    "@metamask/eth-sig-util": "^8.2.0",
     "@metaplex-foundation/mpl-bubblegum": "^4.3.1",
-    "@metaplex-foundation/umi": "^0.9.2",
-    "@metaplex-foundation/umi-bundle-defaults": "^0.9.2",
+    "@metaplex-foundation/umi": "^1.0.0",
+    "@metaplex-foundation/umi-bundle-defaults": "^1.0.0",
     "@polkadot/api": "^15.5.2",
     "@polkadot/extension-inject": "^0.58.3",
     "@polkadot/keyring": "^13.3.1",
@@ -56,7 +56,7 @@
     "@solana/spl-token": "^0.4.12",
     "@solana/wallet-standard-features": "^1.3.0",
     "@solana/web3.js": "^1.98.0",
-    "@wallet-standard/base": "^0.0.0-20240703212708",
+    "@wallet-standard/base": "^1.1.0",
     "add": "^2.0.6",
     "bignumber.js": "^9.1.2",
     "bip39": "^3.1.0",
@@ -92,7 +92,7 @@
     "@rollup/plugin-commonjs": "^28.0.2",
     "@rollup/plugin-inject": "^5.0.5",
     "@rollup/plugin-json": "^6.1.0",
-    "@rollup/plugin-node-resolve": "^15.3.1",
+    "@rollup/plugin-node-resolve": "^16.0.0",
     "@rollup/plugin-replace": "^6.0.2",
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^12.1.2",
@@ -114,12 +114,12 @@
     "@vue/eslint-config-prettier": "^10.2.0",
     "@vue/eslint-config-typescript": "^14.3.0",
     "@vue/tsconfig": "^0.7.0",
-    "@vueuse/core": "^11.3.0",
+    "@vueuse/core": "^12.5.0",
     "cross-env": "^7.0.3",
-    "eslint": "^9.19.0",
+    "eslint": "^9.20.0",
     "eslint-plugin-vue": "^9.32.0",
     "fs-extra": "^11.3.0",
-    "jsdom": "^25.0.1",
+    "jsdom": "^26.0.0",
     "less": "^4.2.2",
     "less-loader": "^12.2.0",
     "npm-run-all2": "^7.0.2",
