feat: cleanup, enable identicon

--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -67,6 +67,7 @@
     "ethereum-cryptography": "^2.2.1",
     "ethereumjs-abi": "^0.6.8",
     "eventemitter3": "^5.0.1",
+    "jdenticon": "^3.3.0",
     "lodash": "^4.17.21",
     "memoize-one": "^6.0.0",
     "moment": "^2.30.1",
