--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@amplitude/analytics-browser": "^2.11.9",
+    "@bitcoinerlab/secp256k1": "^1.2.0",
     "@enkryptcom/extension-bridge": "workspace:^",
     "@enkryptcom/hw-wallets": "workspace:^",
     "@enkryptcom/keyring": "workspace:^",
@@ -63,6 +64,7 @@
     "bs58": "^6.0.0",
     "concurrently": "^9.1.0",
     "echarts": "^5.5.1",
+    "ecpair": "^3.0.0-rc.0",
     "ethereum-cryptography": "^2.2.1",
     "ethereumjs-abi": "^0.6.8",
     "ethereumjs-wallet": "^1.0.2",
