fix: ts issues and bump version

--- a/packages/extension/tsconfig.node.json
+++ b/packages/extension/tsconfig.node.json
@@ -1,6 +1,7 @@
 {
   "extends": "@tsconfig/node20/tsconfig.json",
   "include": [
+    "env.d.ts",
     "vite.config.*",
     "vitest.config.*",
     "cypress.config.*",
