--- a/.github/workflows/test-swap.yml
+++ b/.github/workflows/test-swap.yml
@@ -12,5 +12,4 @@ jobs:
           node-version: "22.10.0"
           cache: "yarn"
       - run: yarn install
-      - run: yarn build:all
-      - run: cd packages/swap && yarn test
+      - run ▋
