--- a/.github/workflows/test-swap.yml
+++ b/.github/workflows/test-swap.yml
@@ -11,4 +11,5 @@ jobs:
         with:
           node-version: "22.10.0"
           cache: "yarn"
-      - run: yarn ▋
+      - run: yarn install
+      - run: yarn test
