--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -23,7 +23,7 @@
     "watch:firefox": "yarn prebuild && cross-env BROWSER='firefox' vite"
   },
   "dependencies": {
-    "@amplitude/analytics-browser": "^2.11.13",
+    "@amplitude/analytics-browser": "^2.14.0",
     "@enkryptcom/extension-bridge": "workspace:^",
     "@enkryptcom/hw-wallets": "workspace:^",
     "@enkryptcom/keyring": "workspace:^",
@@ -40,25 +40,25 @@
     "@kadena/pactjs-cli": "^1.17.1",
     "@ledgerhq/hw-transport-webusb": "^6.29.4",
     "@metamask/eth-sig-util": "^8.2.0",
-    "@metaplex-foundation/mpl-bubblegum": "^4.3.1",
-    "@metaplex-foundation/umi": "^1.1.1",
-    "@metaplex-foundation/umi-bundle-defaults": "^1.1.1",
-    "@polkadot/api": "^15.8.1",
-    "@polkadot/extension-inject": "^0.58.5",
-    "@polkadot/keyring": "^13.4.3",
-    "@polkadot/rpc-provider": "^15.8.1",
-    "@polkadot/types": "^15.8.1",
-    "@polkadot/types-known": "^15.8.1",
-    "@polkadot/ui-shared": "^3.12.2",
-    "@polkadot/util": "^13.4.3",
+    "@metaplex-foundation/mpl-bubblegum": "^4.4.0",
+    "@metaplex-foundation/umi": "^1.2.0",
+    "@metaplex-foundation/umi-bundle-defaults": "^1.2.0",
+    "@polkadot/api": "^15.9.2",
+    "@polkadot/extension-inject": "^0.58.8",
+    "@polkadot/keyring": "^13.4.4",
+    "@polkadot/rpc-provider": "^15.9.2",
+    "@polkadot/types": "^15.9.2",
+    "@polkadot/types-known": "^15.9.2",
+    "@polkadot/ui-shared": "^3.13.1",
+    "@polkadot/util": "^13.4.4",
     "@polkadot/wasm-crypto": "^7.4.1",
-    "@solana-developers/helpers": "^2.8.0",
+    "@solana-developers/helpers": "2.8.0",
     "@solana/spl-token": "^0.4.13",
     "@solana/wallet-standard-features": "^1.3.0",
     "@solana/web3.js": "^1.98.0",
     "@wallet-standard/base": "^1.1.0",
     "add": "^2.0.6",
-    "bignumber.js": "^9.1.2",
+    "bignumber.js": "^9.2.1",
     "bip39": "^3.1.0",
     "bitcoinjs-lib": "^6.1.7",
     "bs58": "^6.0.0",
@@ -73,7 +73,7 @@
     "moment": "^2.30.1",
     "nanoevents": "^9.1.0",
     "pact-lang-api": "^4.3.6",
-    "pinia": "^2.3.1",
+    "pinia": "^3.0.2",
     "qrcode.vue": "^3.6.0",
     "switch-ts": "^1.1.1",
     "url-parse": "^1.5.10",
@@ -97,46 +97,46 @@
     "@rollup/plugin-replace": "^6.0.2",
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^12.1.2",
-    "@tsconfig/node20": "^20.1.4",
-    "@types/bs58": "^4.0.4",
-    "@types/chrome": "^0.0.309",
+    "@tsconfig/node20": "^20.1.5",
+    "@types/bs58": "^5.0.0",
+    "@types/chrome": "^0.0.315",
     "@types/ethereumjs-abi": "^0.6.5",
     "@types/events": "^3.0.3",
     "@types/fs-extra": "^11.0.4",
     "@types/less": "^3.0.8",
     "@types/lodash": "^4.17.16",
-    "@types/node": "^22.13.10",
+    "@types/node": "^22.14.1",
     "@types/url-parse": "^1.4.11",
     "@types/utf-8-validate": "^5.0.2",
     "@types/uuid": "^10.0.0",
     "@types/wif": "^2.0.5",
     "@types/zxcvbn": "^4.4.5",
-    "@vitejs/plugin-vue": "^5.2.1",
+    "@vitejs/plugin-vue": "^5.2.3",
     "@vue/eslint-config-prettier": "^10.2.0",
     "@vue/eslint-config-typescript": "^14.5.0",
     "@vue/tsconfig": "^0.7.0",
-    "@vueuse/core": "^12.8.2",
+    "@vueuse/core": "^13.1.0",
     "cross-env": "^7.0.3",
-    "eslint": "^9.22.0",
-    "eslint-plugin-vue": "^9.33.0",
+    "eslint": "^9.24.0",
+    "eslint-plugin-vue": "^10.0.0",
     "fs-extra": "^11.3.0",
-    "jsdom": "^26.0.0",
-    "less": "^4.2.2",
+    "jsdom": "^26.1.0",
+    "less": "^4.3.0",
     "less-loader": "^12.2.0",
     "npm-run-all2": "^7.0.2",
     "prettier": "^3.5.3",
     "rimraf": "^6.0.1",
-    "rollup": "^4.35.0",
+    "rollup": "^4.40.0",
     "rollup-plugin-visualizer": "^5.14.0",
     "semver": "^7.7.1",
     "systeminformation": "^5.25.11",
     "tsup": "^8.4.0",
-    "typescript": "~5.8.2",
+    "typescript": "~5.8.3",
     "url": "^0.11.4",
-    "vite": "^6.2.1",
+    "vite": "^6.3.1",
     "vite-plugin-node-polyfills": "0.23.0",
     "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^3.0.8",
+    "vitest": "^3.1.1",
     "vue-tsc": "^2.2.8",
     "webextension-polyfill": "^0.12.0"
   },
