--- a/packages/keyring/package.json
+++ b/packages/keyring/package.json
@@ -31,7 +31,8 @@
     "@enkryptcom/utils": "workspace:^",
     "@polkadot/util": "^13.2.3",
     "assert": "^2.1.0",
-    "bip39": "^3.1.0"
+    "bip32": "2.0.6",
+    "bip39": "3.1.0"
   },
   "devDependencies": {
     "@types/node": "^22.9.0",
