--- a/packages/name-resolution/tsconfig.json
+++ b/packages/name-resolution/tsconfig.json
@@ -2,13 +2,13 @@
   "extends": "./tsconfig.paths.json",
   "compilerOptions": {
     "lib": ["ESNext", "dom"],
-    "moduleResolution": "bundler",
+    "moduleResolution": "node",
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "removeComments": true,
     "sourceMap": true,
     "target": "es5",
-    "module": "es2020",
+    "module": "commonjs",
     "outDir": "dist",
     "resolveJsonModule": true,
     "esModuleInterop": true,
