--- a/packages/name-resolution/package.json
+++ b/packages/name-resolution/package.json
@@ -52,7 +52,6 @@
     "@solana/web3.js": "^1.98.0",
     "@unstoppabledomains/resolution": "^9.3.3",
     "@web3-name-sdk/core": "^0.4.1",
-    "ethers": "^5.8.0",
-    "viem": "^2.23.12"
+    "ethers": "^5.8.0"
   }
 }
