--- a/packages/name-resolution/package.json
+++ b/packages/name-resolution/package.json
@@ -22,6 +22,7 @@
     "node": ">=14.15.0"
   },
   "devDependencies": {
+    "@bonfida/spl-name-service": "^3.0.10",
     "@types/node": "^22.14.1",
     "@typescript-eslint/eslint-plugin": "^8.30.1",
     "@typescript-eslint/parser": "^8.30.1",
@@ -37,6 +38,7 @@
     "tsup": "^8.4.0",
     "typescript": "^5.8.3",
     "typescript-eslint": "8.30.1",
+    "viem": "^2.29.2",
     "vitest": "^3.1.1"
   },
   "repository": {
@@ -49,7 +51,6 @@
   "dependencies": {
     "@ensdomains/address-encoder": "^1.1.2",
     "@siddomains/sidjs": "0.1.29",
-    "@solana/web3.js": "^1.98.0",
     "@unstoppabledomains/resolution": "^9.3.3",
     "@web3-name-sdk/core": "^0.4.1",
     "ethers": "^5.8.0"
