--- a/packages/name-resolution/tsconfig.json
+++ b/packages/name-resolution/tsconfig.json
@@ -2,20 +2,17 @@
   "extends": "./tsconfig.paths.json",
   "compilerOptions": {
     "lib": ["ESNext", "dom"],
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "removeComments": true,
     "sourceMap": true,
     "target": "es5",
-    "module": "commonjs",
+    "module": "ES2015",
     "outDir": "dist",
     "resolveJsonModule": true,
     "esModuleInterop": true,
-    "declaration": true,
-    "paths": {
-      "@web3-name-sdk/core/*": ["node_modules/@web3-name-sdk/core/dist/*"]
-    },
+    "declaration": true
   },
   "include": ["src/**/*.ts", "tests/**/*.ts"],
   "exclude": [
