--- a/packages/hw-wallets/package.json
+++ b/packages/hw-wallets/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@enkryptcom/hw-wallets",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "Hardware wallet manager for enkrypt",
   "type": "module",
   "main": "src/index.ts",
@@ -57,7 +57,7 @@
     "@ledgerhq/hw-app-solana": "^7.4.0",
     "@ledgerhq/hw-transport": "^6.31.4",
     "@ledgerhq/hw-transport-webusb": "^6.29.4",
-    "@ledgerhq/live-common": "^34.20.0",
+    "@ledgerhq/live-common": "34.20.0",
     "@polkadot/types": "^15.9.3",
     "@polkadot/util": "^13.4.4",
     "@trezor/connect": "^9.5.4",
