--- a/packages/hw-wallets/package.json
+++ b/packages/hw-wallets/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@enkryptcom/hw-wallets",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "Hardware wallet manager for enkrypt",
   "type": "module",
   "main": "src/index.ts",
@@ -22,6 +22,7 @@
     "node": ">=14.15.0"
   },
   "devDependencies": {
+    "@trezor/connect-web": "^9.5.5",
     "@types/node": "^22.15.17",
     "@typescript-eslint/eslint-plugin": "^8.32.1",
     "@typescript-eslint/parser": "^8.32.1",
