--- a/packages/name-resolution/package.json
+++ b/packages/name-resolution/package.json
@@ -22,7 +22,6 @@
     "node": ">=14.15.0"
   },
   "devDependencies": {
-    "@bonfida/spl-name-service": "^3.0.10",
     "@types/node": "^22.15.17",
     "@typescript-eslint/eslint-plugin": "^8.32.1",
     "@typescript-eslint/parser": "^8.32.1",
@@ -49,10 +48,10 @@
   "author": "kvhnuke",
   "license": "MIT",
   "dependencies": {
+    "@bonfida/spl-name-service": "3.0.10",
     "@ensdomains/address-encoder": "^1.1.2",
-    "@siddomains/sidjs": "0.1.29",
     "@unstoppabledomains/resolution": "^9.3.3",
-    "@web3-name-sdk/core": "^0.4.1",
+    "@web3-name-sdk/core": "0.4.1",
     "ethers": "^5.8.0"
   }
 }
