devop: ledger typed signing complete

--- a/packages/hw-wallets/package.json
+++ b/packages/hw-wallets/package.json
@@ -58,6 +58,7 @@
     "@ledgerhq/hw-transport": "^6.31.5",
     "@ledgerhq/hw-transport-webusb": "^6.29.5",
     "@ledgerhq/live-common": "^34.20.0",
+    "@metamask/eth-sig-util": "^8.2.0",
     "@polkadot/types": "^16.1.1",
     "@polkadot/util": "^13.5.1",
     "@trezor/connect": "^9.5.5",
