--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -43,6 +43,7 @@
     "@metaplex-foundation/mpl-bubblegum": "^5.0.1",
     "@metaplex-foundation/umi": "^1.2.0",
     "@metaplex-foundation/umi-bundle-defaults": "^1.2.0",
+    "@multiversx/sdk-core": "^14.2.1",
     "@polkadot/api": "^16.1.1",
     "@polkadot/extension-inject": "^0.58.10",
     "@polkadot/keyring": "^13.5.1",
