--- a/packages/extension/tsconfig.json
+++ b/packages/extension/tsconfig.json
@@ -7,5 +7,8 @@
     {
       "path": "./tsconfig.app.json"
     }
-  ]
+  ],
+  "compilerOptions": {
+    "types": [".kadena/pactjs-generated"]
+  }
 }
