--- a/packages/keyring/package.json
+++ b/packages/keyring/package.json
@@ -25,6 +25,7 @@
     "@enkryptcom/signer-bitcoin": "workspace:^",
     "@enkryptcom/signer-ethereum": "workspace:^",
     "@enkryptcom/signer-kadena": "workspace:^",
+    "@enkryptcom/signer-massa": "workspace:^",
     "@enkryptcom/signer-polkadot": "workspace:^",
     "@enkryptcom/storage": "workspace:^",
     "@enkryptcom/types": "workspace:^",
