--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -24,6 +24,7 @@
     "node": ">=14.15.0"
   },
   "devDependencies": {
+    "@massalabs/massa-web3": "^5.2.1-dev",
     "@types/node": "^22.16.5",
     "@typescript-eslint/eslint-plugin": "^8.38.0",
     "@typescript-eslint/parser": "^8.38.0",
