Add synchronization logic for sets and tags

--- a/packages/extension/tsconfig.app.json
+++ b/packages/extension/tsconfig.app.json
@@ -10,6 +10,9 @@
   ],
   "exclude": ["src/**/__tests__/*"],
   "compilerOptions": {
+    "skipLibCheck": true,
+    "allowJs": true,
+    "isolatedModules": true,
     "composite": true,
     "verbatimModuleSyntax": false,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
